# mantispdf

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  vercel.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/mantis-wasm/: Cargo.toml
crates/mantis-wasm/.cargo/: config.toml
crates/mantis-wasm/src/: compress.rs  edit.rs  encrypt.rs  lib.rs  merge.rs  pdf_util.rs  rotate.rs  split.rs  watermark.rs
docs/architecture/: 01-extraction-engine.md  02-math-ocr.md  03-licensing.md
e2e/: smoke.spec.ts  split-upload.spec.ts
public/: robots.txt  sitemap.xml
scripts/: build-wasm.sh  copy-pdf-worker.mjs  make-sample-pdf.mjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts  wasm.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  math_heuristic.rs  math_ocr.rs  model_assets.rs  pdf_render.rs
src/components/common/: DropZone.tsx  ErrorAlert.tsx  ProgressOverlay.tsx
src/components/desktop/: TitleBar.test.tsx  TitleBar.tsx
src/components/edit/: EditThumbnailGrid.tsx
src/components/home/: ToolCard.tsx  ToolGrid.tsx
src/components/landing/: Dropzone.tsx  FeatureStrip.tsx  Hero.tsx  ParsingTerminal.tsx  PdfPreview.tsx  Workspace.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/license/: LicenseDialog.tsx
src/components/merge/: MergeActions.tsx  MergeFileList.tsx
src/components/seo/: PageSEO.tsx
src/components/split/: DropZone.tsx  PageThumbnail.tsx  ProgressOverlay.tsx  SplitActions.tsx  ThumbnailGrid.tsx
src/hooks/: useEditState.ts  useLicense.ts  useMergeState.ts  usePdfToImage.ts  usePdfWorker.ts  useSplitState.ts
src/lib/: downloadZip.test.ts  downloadZip.ts  fileHelpers.test.ts  fileHelpers.ts  mathHeuristic.test.ts  mathHeuristic.ts  pdf.ts  workerClient.test.ts  workerClient.ts  workerProtocol.ts
src/pages/: CompressPdfPage.tsx  EditPdfPage.tsx  EncryptPdfPage.tsx  HomePage.tsx  MergePdfPage.tsx  PdfToImagePage.tsx  RotatePdfPage.tsx  SplitPdfPage.tsx  WatermarkPdfPage.tsx
src/types/: pdf.ts
src/workers/: pdf.worker.ts
