[package]
name = "app"
version = "0.1.0"
description = "MantisPDF desktop — privacy-first PDF toolkit and AI document extraction."
authors = ["Bryan Chen"]
license = "MIT"
repository = "https://github.com/BryanBradfo/mantispdf"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
# Stage 1 of the extraction engine (see docs/architecture/01-extraction-engine.md).
# default-features = false drops the `tesseract` feature — born-digital text
# extraction needs no OCR, and it avoids the tesseract-rs/leptonica build.
liteparse = { version = "2.0.8", default-features = false }

# Stage 3 — Math OCR (ADR 02, Path C): pix2tex exported to ONNX, run via ort.
anyhow = "1"
ort = { version = "=2.0.0-rc.10", features = ["download-binaries"] }
image = "0.25"
regex = "1"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
