[package]
name = "mantis-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
lopdf = "0.39"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
zune-jpeg = { version = "0.4", default-features = false }
jpeg-encoder = { version = "0.6", default-features = false }
