[package]
name = "mantis-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

# Skip the wasm-opt pass: the wasm-pack-bundled wasm-opt fails to parse our
# SIMD-enabled wasm in CI ("Fatal: error in parsing input"). rustc already
# emits valid wasm with +simd128, so the module is correct without it.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
lopdf = "0.39"
wasm-bindgen = "0.2"
getrandom = { version = "0.3", features = ["wasm_js"] }
js-sys = "0.3"
zune-jpeg = { version = "0.4", default-features = false }
jpeg-encoder = { version = "0.6", default-features = false }
